iterate api (#5)
